--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <a href="https://www.linkedin.com/in/shashank-h" class="cta-button" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-linkedin"></i> Connect on LinkedIn
                 </a>
-                <a href="mailto:contact@shashank-h.com" class="cta-button secondary">
+                <a href="mailto:shashankharikripa00@gmail.com" class="cta-button secondary">
                     <i class="fas fa-envelope"></i> Send Email
                 </a>
             </div>
