--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        High agency, High ownership, High impact Generalist Engineer
+        Cracked - High agency, High ownership, High impact Generalist Engineer
         <br />
         <br />
         Started out with frontend, then mobile, cross-platform, blockchain, AI
