--- a/index.html
+++ b/index.html
@@ -15,6 +15,35 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+      import { getAnalytics, logEvent } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyCAacgNGs_SXhHA5FAI2GONvbpsX9hTiYI",
+        authDomain: "shashank-portfolio-site.firebaseapp.com",
+        projectId: "shashank-portfolio-site",
+        storageBucket: "shashank-portfolio-site.firebasestorage.app",
+        messagingSenderId: "351249282442",
+        appId: "1:351249282442:web:dc0b2ce97467afa40d8473",
+        measurementId: "G-FELVS32KZZ"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+
+      // Make logResumeDownload function available globally
+      window.logResumeDownload = function() {
+        logEvent(analytics, 'resume_download');
+      };
+
+    </script>
   </head>
   <body>
     <header>
@@ -27,7 +56,7 @@
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="Shashank H - Generalist Engineer.pdf" download>Resume</a></li>
+          <li><a onclick="logResumeDownload()" href="Shashank H - Generalist Engineer.pdf" download>Resume</a></li>
         </ul>
       </nav>
       <section id="header-contact">
