feat: add blog section with first 'whoami' post, update blog styling, and main navigation.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="/blog/">Blog</a></li>
         <li><a onclick="logResumeDownload()" href="Shashank H - Generalist Engineer.pdf" download>Resume</a></li>
         <li>
           <button id="theme-toggle" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" class="theme-toggle-btn">
