feat: Implement dynamic Firebase SDK loading with error handling and add a referrer policy meta tag.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
+  <meta name="referrer" content="no-referrer-when-downgrade" />
   <!-- <script type="module">
     import { logResumeDownload } from "./firebase.js";
     window.logResumeDownload = logResumeDownload;
