--- a/blog_template.html
+++ b/blog_template.html
@@ -63,9 +63,21 @@
       <div class="blog-content">
         <!-- Content goes here -->
         <p>Write your blog content here...</p>
+        <p class="author-signature">Author: Shashank</p>
       </div>
     </article>
   </main>
+
+  <footer>
+    <div class="footer-content">
+      <p>&copy; <script>document.write(new Date().getFullYear())</script> Shashank H. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="../../">Home</a>
+        <a href="https://linkedin.com/in/shashank-h" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        <a href="https://github.com/shashank-h" target="_blank" rel="noopener noreferrer">GitHub</a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
